--- a/BuildUnix/espws-2.0/Makefile.in
+++ b/BuildUnix/espws-2.0/Makefile.in
@@ -67,6 +67,7 @@ AR = @AR@
 CC = @CC@
 CPP = @CPP@
 CXX = @CXX@
+FLUID = @FLUID@
 GLLIB = @GLLIB@
 MAKEINFO = @MAKEINFO@
 PACKAGE = @PACKAGE@
@@ -80,7 +81,7 @@ VERSION = @VERSION@
 
 SUFFIXES = .cxx
 
-VPATH = $(srcdir)/../../SrcUnix/espws-2.0:
+VPATH = $(srcdir):$(srcdir)/../../SrcUnix/espws-2.0:
 
 CFLAGS = $(POSER_CFLAGS) $(LOCAL_CFLAGS) $(X_CFLAGS)
 CXXFLAGS = $(POSER_CXXFLAGS) $(LOCAL_CFLAGS) $(X_CFLAGS)
